Bug 343655 - Previous/Next blending modes don't follow one another abiding by the drop-down menu list
Summary: Previous/Next blending modes don't follow one another abiding by the drop-dow...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9 Beta
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-01 12:44 UTC by mvowada
Modified: 2020-09-04 18:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2015-02-01 12:44:58 UTC
By doing previous/next blending mode via hotkeys, one expects to flow the list of modes, as they are shown in the drop-down menu, but, in fact, this doesn't happen or only partially.

Reproducible: Always

Steps to Reproduce:
1. (Menu) > Configure Krita > Genera > Favorite presets, and set it to 15
2. restart Krita
3. Createa new document

Actual Results:  
1. hit Ctrl+Alt++ to switch to the next blending mode

Expected Results:  
you can't predict the successive modes, at some point.
Comment 1 mvowada 2015-02-01 12:53:58 UTC
I'm sorry, I've involuntarily messed up the report. 
Please, ignore what is indicated in above "Steps to Reproduce". 
In order to reproduce the issue follow what I've indicated under "Actual Results" (1. hit Ctrl+Alt++ to switch to the next blending mode)
Comment 2 Halla Rempt 2015-02-02 18:55:51 UTC
Git commit 7b270b021923716439a4ec3f1f5cac48d7dd1919 by Boudewijn Rempt.
Committed on 02/02/2015 at 18:54.
Pushed by rempt into branch 'calligra/2.9'.

Apparently, you cannot step through the items in a combobox by increasing
or decreasing the current index, so this needs much more thought.

M  +12   -12   krita/ui/widgets/kis_cmb_composite.cc

http://commits.kde.org/calligra/7b270b021923716439a4ec3f1f5cac48d7dd1919
Comment 3 Halla Rempt 2015-02-02 18:56:18 UTC
To be investigated deeper after the Qt5 port.
Comment 4 Dmitry Kazakov 2020-09-04 18:42:57 UTC
Git commit 33fa2048a39427f58c8e1f873e95e2bc4ec9b23f by Dmitry Kazakov.
Committed on 04/09/2020 at 18:42.
Pushed by dkazakov into branch 'master'.

Reenable Next/Prev Blendign Mode shortcuts

They were disabled in 2015 because iteration didn't work in a simple
way. And my recent fixes for Mouse Wheel and Up/Down keys has solved
the issue.

M  +2    -2    krita/krita.action
M  +4    -4    libs/ui/widgets/kis_cmb_composite.cc

https://invent.kde.org/graphics/krita/commit/33fa2048a39427f58c8e1f873e95e2bc4ec9b23f
Comment 5 Dmitry Kazakov 2020-09-04 18:59:40 UTC
Git commit d301b76c962534de849557ad09bb062f933fae89 by Dmitry Kazakov.
Committed on 04/09/2020 at 18:55.
Pushed by dkazakov into branch 'krita/4.3'.

Reenable Next/Prev Blendign Mode shortcuts

They were disabled in 2015 because iteration didn't work in a simple
way. And my recent fixes for Mouse Wheel and Up/Down keys has solved
the issue.

M  +2    -2    krita/krita.action
M  +4    -4    libs/ui/widgets/kis_cmb_composite.cc

https://invent.kde.org/graphics/krita/commit/d301b76c962534de849557ad09bb062f933fae89