Reenable Next/Prev Blendign Mode shortcuts

They were disabled in 2015 because iteration didn't work in a simple
way. And my recent fixes for Mouse Wheel and Up/Down keys has solved
the issue.

BUG:343655